--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <section>
         <div class="container">
             <div class="logo">
-                <img src="/img/Logo-VG_Tpt02.png" alt="logo de Valle Grande">
+                <img src="./img/Logo-VG_Tpt02.png" alt="logo de Valle Grande">
                 <h3>Usar otra cuenta</h3>
                 <div class="otras_plataformas">
-                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="/img/facebook.png" alt=""></a>
-                    <a href="https://www.instagram.com/" target="_blank"><img src="/img/github.png" alt=""></a>
-                    <a href="https://github.com/" target="_blank"><img src="/img/google.png" alt=""></a>
+                    <a href="https://www.facebook.com/?locale=es_LA" target="_blank"><img src="./img/facebook.png" alt=""></a>
+                    <a href="https://www.instagram.com/" target="_blank"><img src="./img/github.png" alt=""></a>
+                    <a href="https://github.com/" target="_blank"><img src="./img/google.png" alt=""></a>
                 </div>
             </div>
             <div class="formulario">
